--- a/index.html
+++ b/index.html
@@ -11,28 +11,32 @@
 <body>
     
     <div class="grid">
-        <h1>Quiz</h1>
+        <div id="quiz">
 
-        <p id="question"></p> 
+            <h1>Quiz</h1>
+            <hr style="margin-bottom: 20px">
+            <p id="question"></p> 
 
-        <div class="buttons">
-            <button id="btn0"><span id="choice0"></span></button>
-            <button id="btn1"><span id="choice1"></span></button>
-            <button id="btn2"><span id="choice2"></span></button>
-            <button id="btn3"><span id="choice3"></span></button>
-        </div>
+            <div class="buttons">
+                <button id="btn0"><span id="choice0"></span></button>
+                <button id="btn1"><span id="choice1"></span></button>
+                <button id="btn2"><span id="choice2"></span></button>
+                <button id="btn3"><span id="choice3"></span></button>
+            </div>
 
-        <footer>
-            <p id="progress">Question x of y.</p>
-        </footer>
+            <hr>
+
+            <footer>
+                <p id="progress">Question x of y.</p>
+            </footer>
+
+        </div><!-- #quiz -->
+    </div><!-- .grid -->
 
 
-    </div>
-
-
-<script>
-
-</script>
+    <script src="quiz_controller.js"></script>
+    <script src="question.js"></script>
+    <script src="script.js"></script>
 
 </body>
 </html>
